// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`matches snapshots > changes variant 1`] = `
<DocumentFragment>
  <button
    class="sc-kAycRU sc-imWZod fTZbCr aje-btn aje-btn--secondary is-auto"
    data-focus-visible="false"
    type="button"
  >
    Click Me
  </button>
</DocumentFragment>
`;

exports[`matches snapshots > loading completed state 1`] = `
<DocumentFragment>
  <button
    class="sc-kAycRU sc-imWZod fTZbCr aje-btn aje-btn--primary is-auto is-loading"
    data-focus-visible="false"
    type="button"
  >
    <div
      class="sc-iGgVNO gHeqIK aje-spinner is-medium"
      data-placement="absolute center"
    >
      <span
        class="sc-dcJtft kfyYkk"
      />
    </div>
    Click Me
  </button>
</DocumentFragment>
`;

exports[`matches snapshots > loading state 1`] = `
<DocumentFragment>
  <button
    class="sc-kAycRU sc-imWZod fTZbCr aje-btn aje-btn--primary is-auto is-loading"
    data-focus-visible="false"
    type="button"
  >
    <div
      class="sc-iGgVNO gHeqIK aje-spinner is-medium"
      data-placement="absolute center"
    >
      <div
        class="sc-aYaIB beimhq aje-flex"
      >
        <svg
          class="sc-eqUzNf dDhGqj circular-loader"
          data-testid="spinner-svg"
          viewBox="25 25 50 50"
        >
          <circle
            class="sc-fqkwJk gMrUBQ loader-path"
            cx="50"
            cy="50"
            fill="none"
            r="20"
            stroke-width="0.5em"
          />
        </svg>
      </div>
    </div>
    Click Me
  </button>
</DocumentFragment>
`;

exports[`matches snapshots > normal display 1`] = `
<DocumentFragment>
  <button
    class="sc-kAycRU sc-imWZod fTZbCr aje-btn aje-btn--primary is-auto"
    data-focus-visible="false"
    type="button"
  >
    Click Me
  </button>
</DocumentFragment>
`;
